@@ -1,3 +1,7 @@
+20030706
+ - (dtucker) [ssh-rand-helper.c loginrec.c]
+   Apply atomicio typing change to these too.
+
 20030703
  - (dtucker) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2003/06/28 07:48:10
